@@ -1,7 +1,5 @@
 package by.training.task1oop.parser;
-
-
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 
@@ -22,12 +20,8 @@ public final class StringParser {
      */
     public static List<String> parseString(final String fileLine) {
         Optional<String> stringOptional = Optional.ofNullable(fileLine);
-        if(stringOptional.isPresent()){
-            return Arrays.asList(stringOptional.orElseGet(String::new).
-                    trim().split(SEP_REGEX));
-        } else {
-            return null;
-        }
+        return stringOptional.map(s -> List.of(
+                s.trim().split(SEP_REGEX))).orElseGet(ArrayList::new);
 
     }
 }
