@@ -4,22 +4,22 @@ import by.training.task1oop.parser.StringParser;
 import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
 
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.List;
 
 import static org.testng.AssertJUnit.assertEquals;
 
 public class StringParserTest {
     @DataProvider(name = "generalData")
-    public Object[][] createDataForSqrt() {
-        return new Object[][]{{null, null},
-                {"",Arrays.asList("")},
-                {" ", Arrays.asList("")},
-                {" WORD ", Arrays.asList("WORD")}};
+    public Object[][] createDataForParer() {
+        return new Object[][]{{null, new ArrayList<>()},
+                {"",List.of("")},
+                {" ", List.of("")},
+                {" WORD ", List.of("WORD")}};
     }
     @Test(description = "positive scenario of readFromFile")
     public void parseStringPositive() {
-        assertEquals(Arrays.asList("PASSENGER", "1265687556", "100", "350", "850", "NARROW_BODY"),
+        assertEquals(List.of("PASSENGER", "1265687556", "100", "350", "850", "NARROW_BODY"),
                 StringParser.parseString("PASSENGER 1265687556 100 350 850 NARROW_BODY"));
     }
     @Test(description = "positive scenario of readFromFile", dataProvider = "generalData")
